[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface.gd" type="Script" id=2]
[ext_resource path="res://art/strzałka.jpg" type="Texture" id=3]
[ext_resource path="res://Pancerni.gd" type="Script" id=4]
[ext_resource path="res://Pancerni2.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="Interface" type="Node2D"]
script = ExtResource( 2 )

[node name="Start" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Start_label" type="Label" parent="Start"]
margin_right = 600.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Chłopi i Sarmaci"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start_button" type="Button" parent="Start"]
margin_left = 184.0
margin_top = 536.0
margin_right = 440.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu" type="Node2D" parent="."]
position = Vector2( 0, -2.05948 )
__meta__ = {
"_edit_group_": true
}

[node name="Menu_label" type="Label" parent="Menu"]
margin_left = -2.1189
margin_right = 603.881
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Co chcesz zrobic?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Add" type="Button" parent="Menu"]
margin_left = 158.93
margin_top = 444.128
margin_right = 462.93
margin_bottom = 553.128
custom_fonts/font = SubResource( 4 )
text = "Dodaj surowce"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Income" type="Button" parent="Menu"]
margin_left = 160.397
margin_top = 604.299
margin_right = 464.397
margin_bottom = 713.299
custom_fonts/font = SubResource( 4 )
text = "Zmien dochód"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Choose" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Choose_label" type="Label" parent="Choose"]
margin_left = -5.33936
margin_top = 2.66968
margin_right = 597.661
margin_bottom = 176.67
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wybierz zastęp"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pancerni_button" type="Button" parent="Choose"]
margin_left = 173.76
margin_top = 197.697
margin_right = 419.76
margin_bottom = 292.697
custom_fonts/font = SubResource( 6 )
text = "Pancerni"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dragoni_button" type="Button" parent="Choose"]
margin_left = 173.76
margin_top = 331.181
margin_right = 419.76
margin_bottom = 426.181
custom_fonts/font = SubResource( 6 )
text = "Dragoni"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Rajtarzy_button" type="Button" parent="Choose"]
margin_left = 176.005
margin_top = 462.598
margin_right = 422.005
margin_bottom = 557.598
custom_fonts/font = SubResource( 6 )
text = "Rajtarzy"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Lisowczycy_button" type="Button" parent="Choose"]
margin_left = 176.005
margin_top = 597.293
margin_right = 422.005
margin_bottom = 692.293
custom_fonts/font = SubResource( 6 )
text = "Lisowczycy"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Korsarze_button" type="Button" parent="Choose"]
margin_left = 175.489
margin_top = 731.439
margin_right = 421.489
margin_bottom = 826.439
custom_fonts/font = SubResource( 6 )
text = "Korsarze"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Arrow_menu" type="Button" parent="Choose"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 56.0
margin_top = 865.0
margin_right = 694.0
margin_bottom = 1497.0
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choose2" type="Node2D" parent="."]
position = Vector2( 1.05945, 1.05946 )
__meta__ = {
"_edit_group_": true
}

[node name="Choose2_label" type="Label" parent="Choose2"]
margin_left = -5.33936
margin_top = 2.66968
margin_right = 597.661
margin_bottom = 176.67
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wybierz zastęp"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Pancerni2_button" type="Button" parent="Choose2"]
margin_left = 173.76
margin_top = 197.697
margin_right = 419.76
margin_bottom = 292.697
custom_fonts/font = SubResource( 6 )
text = "Pancerni"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Dragoni2_button" type="Button" parent="Choose2"]
margin_left = 173.76
margin_top = 331.181
margin_right = 419.76
margin_bottom = 426.181
custom_fonts/font = SubResource( 6 )
text = "Dragoni"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Rajtarzy2_button" type="Button" parent="Choose2"]
margin_left = 176.005
margin_top = 462.598
margin_right = 422.005
margin_bottom = 557.598
custom_fonts/font = SubResource( 6 )
text = "Rajtarzy"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Lisowczycy2_button" type="Button" parent="Choose2"]
margin_left = 176.005
margin_top = 597.293
margin_right = 422.005
margin_bottom = 692.293
custom_fonts/font = SubResource( 6 )
text = "Lisowczycy"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Korsarze2_button" type="Button" parent="Choose2"]
margin_left = 175.489
margin_top = 731.439
margin_right = 421.489
margin_bottom = 826.439
custom_fonts/font = SubResource( 6 )
text = "Korsarze"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Arrow_menu2" type="Button" parent="Choose2"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 56.0
margin_top = 865.0
margin_right = 694.0
margin_bottom = 1497.0
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pancerni" type="Node2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Add_button" type="Button" parent="Pancerni"]
margin_left = 435.0
margin_top = 92.0
margin_right = 565.0
margin_bottom = 156.0
mouse_default_cursor_shape = 1
custom_fonts/font = SubResource( 7 )
text = "Dodaj"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Value" type="LineEdit" parent="Pancerni"]
margin_left = 238.446
margin_top = 91.6568
margin_right = 372.446
margin_bottom = 156.657
custom_fonts/font = SubResource( 9 )
align = 1
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Resource" type="LineEdit" parent="Pancerni"]
margin_left = 63.6349
margin_top = 91.6568
margin_right = 197.635
margin_bottom = 156.657
custom_fonts/font = SubResource( 10 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Value_label" type="Label" parent="Pancerni"]
margin_left = 234.059
margin_top = 13.0
margin_right = 370.059
margin_bottom = 88.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wartość"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Resource_label" type="Label" parent="Pancerni"]
margin_left = 62.4265
margin_top = 9.82162
margin_right = 198.426
margin_bottom = 84.8216
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Zasób"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_menu3" type="Button" parent="Pancerni"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 57.0594
margin_top = 866.059
margin_right = 695.059
margin_bottom = 1498.06
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pancerni2" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Add_button2" type="Button" parent="Pancerni2"]
margin_left = 435.0
margin_top = 92.0
margin_right = 565.0
margin_bottom = 156.0
mouse_default_cursor_shape = 1
custom_fonts/font = SubResource( 7 )
text = "Dodaj"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Value2" type="LineEdit" parent="Pancerni2"]
margin_left = 238.446
margin_top = 91.6568
margin_right = 372.446
margin_bottom = 156.657
custom_fonts/font = SubResource( 9 )
align = 1
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Resource2" type="LineEdit" parent="Pancerni2"]
margin_left = 63.6349
margin_top = 91.6568
margin_right = 197.635
margin_bottom = 156.657
custom_fonts/font = SubResource( 10 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Value_label2" type="Label" parent="Pancerni2"]
margin_left = 234.059
margin_top = 13.0
margin_right = 370.059
margin_bottom = 88.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wartość"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Resource_label2" type="Label" parent="Pancerni2"]
margin_left = 62.4265
margin_top = 9.82162
margin_right = 198.426
margin_bottom = 84.8216
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Zasób"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Refresh" type="Button" parent="Pancerni2"]
margin_left = 435.0
margin_top = 170.488
margin_right = 565.0
margin_bottom = 234.488
mouse_default_cursor_shape = 1
custom_fonts/font = SubResource( 7 )
text = "Odśwież"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Arrow_menu8" type="Button" parent="Pancerni2"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 57.0594
margin_top = 866.059
margin_right = 695.059
margin_bottom = 1498.06
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dragoni" type="Node2D" parent="."]

[node name="Arrow_menu4" type="Button" parent="Dragoni"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 57.0594
margin_top = 866.059
margin_right = 695.059
margin_bottom = 1498.06
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dragoni2" type="Node2D" parent="."]

[node name="Rajtarzy" type="Node2D" parent="."]

[node name="Arrow_menu5" type="Button" parent="Rajtarzy"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 57.0594
margin_top = 866.059
margin_right = 695.059
margin_bottom = 1498.06
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rajtarzy2" type="Node2D" parent="."]

[node name="Lisowczycy" type="Node2D" parent="."]

[node name="Arrow_menu6" type="Button" parent="Lisowczycy"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 57.0594
margin_top = 866.059
margin_right = 695.059
margin_bottom = 1498.06
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lisowczycy2" type="Node2D" parent="."]

[node name="Korsarze" type="Node2D" parent="."]

[node name="Arrow_menu7" type="Button" parent="Korsarze"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
margin_left = 57.0594
margin_top = 866.059
margin_right = 695.059
margin_bottom = 1498.06
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Korsarze2" type="Node2D" parent="."]
[connection signal="pressed" from="Pancerni/Add_button" to="Pancerni" method="_on_Add_button_pressed"]
[connection signal="pressed" from="Pancerni2/Add_button2" to="Pancerni2" method="_on_Add_button2_pressed"]
[connection signal="pressed" from="Pancerni2/Refresh" to="Pancerni2" method="_on_Refresh_pressed"]
